# IMUAlgorithmVisualization

./: .Doxyfile  .gitignore  AccelAhrs.cpp  AccelAhrs.hpp  CMakeLists.txt  LICENSE  Makefile  Readme.md  Readme.zh.md  ReadmeAI.md  imu_visualization.rviz  package.xml
Doc/html/: ahrs__pose__visualizer_8hpp.html  ahrs__pose__visualizer_8hpp__incl.map  ahrs__pose__visualizer_8hpp__incl.md5  ahrs__pose__visualizer_8hpp_source.html  annotated.html  attitude__error__visualizer_8hpp.html  attitude__error__visualizer_8hpp__incl.map  attitude__error__visualizer_8hpp__incl.md5  attitude__error__visualizer_8hpp_source.html  classes.html  classimu__visualization_1_1_ahrs_pose_visualizer_node-members.html  doxygen_crawl.html  files.html  (+50 more)
config/: default.yaml  runtime_config.json  transforms.yaml
debug/: EsEkfVisible.py  advanced_analyzer.py  analyze_Acc_integrator.py  analyze_direct_integrator.py  compare_trajectories.py  plot_ground_truth.py  plot_ground_truth_rpy.py  互补可视化.py
docs/: coordinate_systems.md
include/: ahrs_pose_visualizer.hpp  attitude_error_visualizer.hpp  dummy_imu_publisher.hpp  gravity_measurement_visualizer.hpp  ground_truth_visualizer.hpp  imu_error_visualizer.hpp  imu_visualizer.hpp  imu_visualizer_node.hpp
launch/: direct_integration_test.launch  full_analysis.launch  gravityanalyze.launch  run_visualization.launch  visualize_imu.launch
rviz/: ahrs_comparison.rviz  attitude_analysis.rviz  attitude_error_view.rviz  gravity_analyze.rviz  imu_visualization.rviz
scripts/: create_groundtruth_bag.py
src/: ahrs_pose_visualizer.cpp  ahrs_pose_visualizer_node.cpp  attitude_error_visualizer.cpp  attitude_error_visualizer_node.cpp  dummy_imu_publisher.cpp  dummy_imu_publisher_node.cpp  gravity_measurement_visualizer.cpp  gravity_measurement_visualizer_node.cpp  ground_truth_visualizer.cpp  ground_truth_visualizer_node.cpp  imu_error_visualizer.cpp  imu_error_visualizer_node.cpp  imu_visualizer.cpp  imu_visualizer_node.cpp  main.cpp
srv/: GetErrorWithGroundTruth.srv  SetAttitude.srv  SetLocation.srv
(+63 files in other folders)
